--- a/012_Samples/src/app/app.component.html
+++ b/012_Samples/src/app/app.component.html
@@ -7,6 +7,8 @@
     <a routerLink="/01_styles" routerLinkActive="active">01_styles</a>
     <a routerLink="/02_inputs" routerLinkActive="active">02_inputs</a>
     <a routerLink="/03_outputs" routerLinkActive="active">03_outputs</a>
+    <a routerLink="/04_properties" routerLinkActive="active">04_properties</a>
+    <a routerLink="/05_projections" routerLinkActive="active">05_projections</a>
 </nav>
 
 <div id="sample-panel" class="theme-green">
