--- a/012_Samples/src/app/app.component.html
+++ b/012_Samples/src/app/app.component.html
@@ -9,6 +9,11 @@
     <a routerLink="/03_outputs" routerLinkActive="active">03_outputs</a>
     <a routerLink="/04_properties" routerLinkActive="active">04_properties</a>
     <a routerLink="/05_projections" routerLinkActive="active">05_projections</a>
+
+    <h4>02_lifecycle</h4>
+    <a routerLink="/01_ngoninit" routerLinkActive="active">01_ngOnInit</a>
+    <a routerLink="/02_ngonchange" routerLinkActive="active">02_ngOnChange</a>
+    <a routerLink="/03_ngonchange" routerLinkActive="active">03_ngOnChange</a>
 </nav>
 
 <div id="sample-panel" class="theme-green">
