--- a/012_Samples/src/app/app.component.html
+++ b/012_Samples/src/app/app.component.html
@@ -14,6 +14,11 @@
     <a routerLink="/01_ngoninit" routerLinkActive="active">01_ngOnInit</a>
     <a routerLink="/02_ngonchange" routerLinkActive="active">02_ngOnChange</a>
     <a routerLink="/03_ngonchange" routerLinkActive="active">03_ngOnChange</a>
+    <a routerLink="/04_allevents" routerLinkActive="active">04_allEvents</a>
+
+    <h4>03_child_and_content</h4>
+    <a routerLink="/01_child" routerLinkActive="active">01_child</a>
+    <a routerLink="/02_children" routerLinkActive="active">02_children</a>
 </nav>
 
 <div id="sample-panel" class="theme-green">
