--- a/012_Samples/src/app/app.component.html
+++ b/012_Samples/src/app/app.component.html
@@ -19,6 +19,7 @@
     <h4>03_child_and_content</h4>
     <a routerLink="/01_child" routerLinkActive="active">01_child</a>
     <a routerLink="/02_children" routerLinkActive="active">02_children</a>
+    <a routerLink="/03_content" routerLinkActive="active">03_content</a>
 </nav>
 
 <div id="sample-panel" class="theme-green">
