--- a/013_Directives/src/app/app.component.html
+++ b/013_Directives/src/app/app.component.html
@@ -6,10 +6,21 @@
     <h4>01_binding</h4>
     <a routerLink="/01_interpolation" routerLinkActive="active">01_interpolation</a>
     <a routerLink="/02_property_binding" routerLinkActive="active">02_property_binding</a>
+    <a routerLink="/03_event_binding" routerLinkActive="active">03_event_binding</a>
+    <a routerLink="/04_attribute_binding" routerLinkActive="active">04_attribute_binding</a>
+    <a routerLink="/05_class_binding" routerLinkActive="active">05_class_binding</a>
+    <a routerLink="/06_style_binding" routerLinkActive="active">06_style_binding</a>
 
     <h4>02_two_way_databinding</h4>
+    <a routerLink="/01_ngModel" routerLinkActive="active">01_ngModel</a>
+    <a routerLink="/02_ngModel_Inside" routerLinkActive="active">02_ngModel_Inside</a>
 
     <h4>03_buildin-directives</h4>
+    <a routerLink="/01_ngClass" routerLinkActive="active">01_ngClass</a>
+    <a routerLink="/02_ngStyle" routerLinkActive="active">02_ngStyle</a>
+    <a routerLink="/03_ngIf" routerLinkActive="active">03_ngIf</a>
+    <a routerLink="/04_ngSwitch" routerLinkActive="active">04_ngSwitch</a>
+    <a routerLink="/05_ngFor" routerLinkActive="active">05_ngFor</a>
 
     <h4>04_templates</h4>
     
