--- a/013_Directives/src/app/app.component.html
+++ b/013_Directives/src/app/app.component.html
@@ -23,7 +23,10 @@
     <a routerLink="/05_ngFor" routerLinkActive="active">05_ngFor</a>
 
     <h4>04_templates</h4>
-    
+    <a routerLink="/01_ngIfTemplate" routerLinkActive="active">01_ngIfTemplate</a>
+    <a routerLink="/02_ngSwitchTemplate" routerLinkActive="active">02_ngSwitchTemplate</a>
+    <a routerLink="/03_ngForTemplate" routerLinkActive="active">03_ngForTemplate</a>
+    <a routerLink="/04_refVarTemplate" routerLinkActive="active">04_refVarTemplate</a>
 </nav>
 
 <div id="sample-panel" class="theme-green">
