--- a/014_Services/src/app/app.component.html
+++ b/014_Services/src/app/app.component.html
@@ -3,9 +3,16 @@
 </h1>
 
 <nav>
-    <h4>01_Dependency Injection</h4>
+    <h3>01_Dependency Injection</h3>
+
+    <h4>01_Services</h4>
     <a routerLink="/01_simpleService" routerLinkActive="active">01_simpleService</a>
     <a routerLink="/02_serviceHierarchy" routerLinkActive="active">02_serviceHierarchy</a>
+    
+    <h4>02_Providers</h4>
+    <a routerLink="/01_providerLiteral" routerLinkActive="active">01_providerLiteral</a>
+    <a routerLink="/02_providerAliase" routerLinkActive="active">02_providerAliase</a>
+    <a routerLink="/03_providerValue" routerLinkActive="active">03_providerValue</a>
     
 </nav>
 
