--- a/014_Services/src/app/app.component.html
+++ b/014_Services/src/app/app.component.html
@@ -13,6 +13,11 @@
     <a routerLink="/01_providerLiteral" routerLinkActive="active">01_providerLiteral</a>
     <a routerLink="/02_providerAliase" routerLinkActive="active">02_providerAliase</a>
     <a routerLink="/03_providerValue" routerLinkActive="active">03_providerValue</a>
+    <a routerLink="/04_providerFactry" routerLinkActive="active">04_providerFactry</a>
+    <a routerLink="/05_providerOpaque" routerLinkActive="active">05_providerOpaque</a>
+    <a routerLink="/06_providerOptional" routerLinkActive="active">06_providerOptional</a>
+    <a routerLink="/07_providerInjector" routerLinkActive="active">07_providerInjector</a>
+    <a routerLink="/08_providerImplicit" routerLinkActive="active">08_providerImplicit</a>
     
 </nav>
 
