--- a/016_Forms/src/app/app.component.html
+++ b/016_Forms/src/app/app.component.html
@@ -14,6 +14,13 @@
     <a routerLink="/06_mylist" routerLinkActive="active">06_mylist</a>
 
     <h4>02_Forms</h4>
+    <a routerLink="/01_userform" routerLinkActive="active">01_userform</a>
+    <a routerLink="/02_styles" routerLinkActive="active">02_styles</a>
+    <a routerLink="/03_form_custom_css" routerLinkActive="active">03_form_custom_css</a>
+    <a routerLink="/04_form_error_message" routerLinkActive="active">04_form_error_message</a>
+    <a routerLink="/05_form_few_errors" routerLinkActive="active">05_form_few_errors</a>
+    <a routerLink="/06_form_submit" routerLinkActive="active">06_form_submit</a>
+    <a routerLink="/07_form_code_message" routerLinkActive="active">07_form_code_message</a>
 
     <h4>03_ReactiveForms</h4>
 
