--- a/016_Forms/src/app/app.component.html
+++ b/016_Forms/src/app/app.component.html
@@ -23,7 +23,11 @@
     <a routerLink="/07_form_code_message" routerLinkActive="active">07_form_code_message</a>
 
     <h4>03_ReactiveForms</h4>
-
+    <a routerLink="/01_form_control" routerLinkActive="active">01_form_control</a>
+    <a routerLink="/02_form_control_validation" routerLinkActive="active">02_form_control_validation</a>
+    <a routerLink="/03_form_builder" routerLinkActive="active">03_form_builder</a>
+    <a routerLink="/04_form_reactive" routerLinkActive="active">04_form_reactive</a>
+    <a routerLink="/05_form_custome_validation" routerLinkActive="active">05_form_custome_validation</a>
 
 </nav>
 
