http client, jsonp

--- a/017_HTTP/src/app/app.component.html
+++ b/017_HTTP/src/app/app.component.html
@@ -7,6 +7,8 @@
 
     <a routerLink="/01_get-request" routerLinkActive="active">01_get-request</a>
     <a routerLink="/02_post-request" routerLinkActive="active">02_post-request</a>
+    <a routerLink="/03_request-options" routerLinkActive="active">03_request-options</a>
+    <a routerLink="/04_query-string" routerLinkActive="active">04_query-string</a>
 
 
 </nav>
